[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/UI/Score.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Prototype.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/trophys/Cup-plat-icon.png" type="Texture" id=3]
[ext_resource path="res://assets/trophys/Cup-gold-icon.png" type="Texture" id=4]
[ext_resource path="res://src/UI/ParallaxBackgroundScore.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
corner_detail = 1

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.054902, 0.137255, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.0705882, 0.176471, 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0666667, 0.0666667, 0.192157, 1 )

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = ExtResource( 2 )

[node name="Score" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="Background" type="Sprite" parent="."]

[node name="HighScore" type="Panel" parent="."]
margin_left = 373.468
margin_top = 412.9
margin_right = 1025.47
margin_bottom = 520.9
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontuation" type="Label" parent="HighScore"]
margin_left = 35.0
margin_top = 18.0
margin_right = 477.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 13 )
text = "New HighScore"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ranking" type="Sprite" parent="HighScore"]
position = Vector2( 529.224, 51.1559 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Score" type="Panel" parent="."]
margin_left = 254.0
margin_top = 72.3917
margin_right = 1139.0
margin_bottom = 373.392
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pontuation" type="Label" parent="Score"]
margin_left = 164.876
margin_top = 179.977
margin_right = 708.876
margin_bottom = 276.977
custom_fonts/font = SubResource( 2 )
text = "Score: 8"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raking" type="Sprite" parent="Score"]
position = Vector2( 439.2, 100.614 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Restart" type="Button" parent="."]
margin_left = 791.0
margin_top = 589.0
margin_right = 1317.0
margin_bottom = 699.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 43.0
margin_top = 591.0
margin_right = 547.0
margin_bottom = 700.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 7 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_Quit_button_down"]
